--- a/sample-dapps/ai-powered-defi-yield-optimizer/package.json
+++ b/sample-dapps/ai-powered-defi-yield-optimizer/package.json
@@ -20,10 +20,10 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.454.0",
-    "next": "15.2.4",
+    "next": "15.2.6",
     "next-themes": "^0.4.4",
-    "react": "^19",
-    "react-dom": "^19",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "recharts": "latest",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
