--- a/sample-dapps/hyperliquid-portfolio-tracker/package.json
+++ b/sample-dapps/hyperliquid-portfolio-tracker/package.json
@@ -20,8 +20,8 @@
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "lucide-react": "^0.544.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
