--- a/sample-dapps/solana-staking-ui/package.json
+++ b/sample-dapps/solana-staking-ui/package.json
@@ -25,9 +25,9 @@
     "@wallet-standard/core": "^1.1.0",
     "@wallet-standard/react": "^1.0.0",
     "@wallet-standard/react-core": "^1.0.0",
-    "next": "15.1.7",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "next": "15.1.9",
+    "react": "19.0.1",
+    "react-dom": "19.0.1",
     "react-error-boundary": "^5.0.0"
   },
   "devDependencies": {
@@ -36,7 +36,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.7",
+    "eslint-config-next": "15.1.9",
     "postcss": "^8",
     "prettier": "3.5.2",
     "tailwindcss": "^3.4.1",
