--- a/solana/explorer-clone-part-3/starter/package.json
+++ b/solana/explorer-clone-part-3/starter/package.json
@@ -20,11 +20,11 @@
     "@tailwindcss/typography": "^0.5.0",
     "daisyui": "^1.24.3",
     "immer": "^9.0.12",
-    "next": "^16.0.4",
+    "next": "16.0.7",
     "next-compose-plugins": "^2.2.1",
     "next-transpile-modules": "^9.0.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "19.0.1",
+    "react-dom": "19.0.1",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
